--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "pino": "^10.1.0",
-    "pino-http": "^11.0.0"
+    "pino-http": "^11.0.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
